# TiN_Project

./: LICENSE  README.md
.github/workflows/: ci.yml
amb82_firmware/: CMakeLists.txt  README.md  amb82_firmware.ino
amb82_firmware/include/: fpvsystem.hpp
amb82_firmware/src/: fpvsystem.cpp
desktop_app/: CMakeLists.txt  README.md
desktop_app/include/gamepad/: GamepadInputBase.h  GamepadMath.h  SdlGamepadDriver.h
desktop_app/src/: main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
desktop_app/src/gamepad/: SdlGamepadDriver.cpp
desktop_app/tests/: CMakeLists.txt  main_test.cpp  test_gamepad_math.cpp  test_gamepad_math.h  test_vehicle_connection.cpp  test_vehicle_connection.h
desktop_app/tests/mock/: MockGamepadDriver.h
desktop_app_utilities/: CMakeLists.txt  README.md
desktop_app_utilities/include/: VehicleConnection.hpp  VideoStream.hpp
desktop_app_utilities/src/: VehicleConnection.cpp  VideoStream.cpp  main.cpp  main_steering.cpp
doc/: raport.docx
esp32_firmware/: .clangd  CMakeLists.txt  README.md
esp32_firmware/esp32_fw_hil/: pyproject.toml
esp32_firmware/esp32_fw_hil/src/: esp32_fw_hil.py
esp32_firmware/main/: main.c
gui_app_QT/: .gitignore  ARCHITECTURE.md  README.md
